--- a/Dating.App.Backend/Dating.App.Backend/appsettings.json
+++ b/Dating.App.Backend/Dating.App.Backend/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConnection": "Server=DESKTOP-JD0IH1B\\ZULUSQL;Database=TestDatingApp;Trusted_Connection=True;"
-  }
+  },
+  "AppSettings": {
+    "Token": "Super Secret Key" 
+  } 
 }
